# methylphase

./: .gitignore  Cargo.toml  README.md  Snakefile  config.yaml  mkdocs.yml  pixi.toml
.github/workflows/: jekyll-gh-pages.yml  pages.yml
config/contig_bins/: Escherichia_coli_mixed_50-50.tsv  ZymoFecal_contig_1330.tsv
docs/: README.md  _config.yml  faq.md  index.md  overview.md
docs/examples/: analysis.md
docs/getting-started/: installation.md  quickstart.md
docs/usage/: extract.md  phase-variants.md  split-reads.md  typing.md  utils.md
scripts/: analyze_methylation.R  compare_phasing.R  comparing_methylation.R  run_methylation_phasing.py
site/: 404.html  index.html
site/examples/analysis/: index.html
site/faq/: index.html
site/getting-started/installation/: index.html
site/getting-started/quickstart/: index.html
site/overview/: index.html
site/search/: search_index.json
site/usage/extract/: index.html
site/usage/phase-variants/: index.html
site/usage/split-reads/: index.html
site/usage/typing/: index.html
site/usage/utils/: index.html
src/: cli.rs  lib.rs  main.rs
src/commands/: binning.rs  contigs.rs  extract.rs  impute_bam.rs  longitudinal.rs  mod.rs  reads.rs  shared.rs  split_reads.rs  vcf.rs
src/core/: mod.rs  motif.rs  read.rs
src/features/: extract.rs  longitudinal.rs  mod.rs
src/io/: mod.rs  motifs.rs  sequences.rs
src/io/readers/: mod.rs
src/typing/: cli.rs  data.rs  em.rs  entry.rs  error.rs  fastq_split.rs  floria.rs  impute.rs  methylation.rs  mod.rs  model_selection.rs  priors.rs
tests/: extract_cli.rs
(+6 files in other folders)
