[package]
name = "methylphase"
version = "0.2.8"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
noodles-bgzf = "0.43.0"
noodles-core = "0.18.0"
noodles-fastq = "0.21.0"
noodles-bam = "0.83.0"
noodles-sam = "0.79.0"
bstr = "1.7"
csv = "1.3"
hdbscan = "0.4"
crossbeam-channel = "0.5"
flate2 = "1"
tempfile = "3"
rayon = "1.10"

[dev-dependencies]
