[package]
name = "methylphase"
version = "0.3.1"
edition = "2021"

[dependencies]
# Error handling
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
noodles-bgzf = "0.43.0"
noodles-core = "0.18.0"
noodles-fastq = "0.21.0"
noodles-bam = "0.83.0"
noodles-sam = "0.79.0"
bstr = "1.7"
csv = "1.3"
hdbscan = "0.4"
crossbeam-channel = "0.5"
flate2 = "1"
tempfile = "3"
rayon = "1.10"
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[dev-dependencies]
